--- a/yes.html
+++ b/yes.html
@@ -23,7 +23,7 @@
  
     <!-- Header Section -->
     <header class="navbar navbar-expand-lg navbar-light bg-light">
-     <a class="navbar-brand" href="#">
+     <a class="navbar-brand" href="./first.html">
        <span>
          <img src="img.jpeg" style="height: 40px;" alt="Healthcare Solution Logo" height="50">
          <span style="font-size: 22px; font-weight: 700; color: rgb(57, 114, 155);;">LIGHTHOUSE.AI</span>
