--- a/four.html
+++ b/four.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Header Section -->
   <header class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="./first.html">
       <span>
         <img src="img.jpeg" style="height: 40px;" alt="Healthcare Solution Logo" height="50">
         <span style="font-size: 22px; font-weight: 700; color: rgb(57, 114, 155);;">LIGHTHOUSE.AI</span>
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="./first.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./compare.html">Compare</a>
