--- a/second.html
+++ b/second.html
@@ -25,10 +25,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="./first.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Compare</a>
+          <a class="nav-link" href="./compare.html">Compare</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="./help.html">Learn</a>
