--- a/sick_visits.html
+++ b/sick_visits.html
@@ -81,7 +81,7 @@
 
    <!-- Header Section -->
    <header class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="./first.html">
       <span>
         <img src="img.jpeg" style="height: 40px;" alt="Healthcare Solution Logo" height="50">
         <span style="font-size: 22px; font-weight: 700; color: rgb(57, 114, 155);;">LIGHTHOUSE.AI</span>
@@ -94,10 +94,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="./first.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Compare</a>
+          <a class="nav-link" href="./compare.html">Compare</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./help.html">Learn</a>
